--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions{
+        exclude'META-INF/DEPENDENCIES'
+        exclude'META-INF/NOTICE'
+        exclude'META-INF/LICENSE'
+    }
     productFlavors {
     }
 }
@@ -23,6 +28,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.1.1'
-    compile files('C:/Users/karin/AndroidStudioProjects/Helloworld-kato/libs/socketio.jar')
     compile project(':volley')
+    compile 'org.apache.httpcomponents:httpcore:4.3.2'
+    compile 'org.apache.httpcomponents:httpmime:4.3.5'
 }
