--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,10 @@ dependencies {
     compile project(':volley')
     compile 'org.apache.httpcomponents:httpcore:4.3.2'
     compile 'org.apache.httpcomponents:httpmime:4.3.5'
+
+//    compile 'org.apache.httpcomponents:httpclient-android:4.3.5'
+//    compile 'org.apache.httpcomponents:httpclient-cache:4.3.6'
+//    compile 'org.apache.httpcomponents:httpclient:4.3.6'
+//    compile 'org.apache.httpcomponents:httpmime:4.3.6'
+//    compile 'org.apache.httpcomponents:fluent-hc:4.3.6'
 }
